--- a/бот-вк-авито/бот-вк-авито/бот-вк-авито.vcxproj
+++ b/бот-вк-авито/бот-вк-авито/бот-вк-авито.vcxproj
@@ -136,6 +136,7 @@
     <ClCompile Include="MyForm.cpp" />
     <ClCompile Include="MyForm2.cpp" />
     <ClCompile Include="Алгоритмы.cpp" />
+    <ClCompile Include="Импорт.cpp" />
     <ClCompile Include="работа с БД.cpp" />
     <ClCompile Include="совместимость с авито.cpp" />
     <ClCompile Include="совместимость с вк.cpp" />
