--- a/бот-вк-авито/бот-вк-авито/бот-вк-авито.vcxproj
+++ b/бот-вк-авито/бот-вк-авито/бот-вк-авито.vcxproj
@@ -85,6 +85,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <LanguageStandard>stdcpp14</LanguageStandard>
     </ClCompile>
     <Link>
       <AdditionalDependencies />
